# Telecom_CDR_Auto_Loader

./: .env.example  .gitignore  README.md  README_vi.md  build.bat  pyproject.toml
data/checkpoint/: .gitkeep
data/failure/: .gitkeep
data/outbox/: .gitkeep
data/rejected/: .gitkeep
data/success/: .gitkeep
docker/: Dockerfile  docker-compose.yaml  docker-compose.yml
logs/: .gitkeep
sql/: create_table.sql  create_target_table.sql  sample_loader_config.sql
src/: __init__.py  checkpoint.py  config.py  csv_writer.py  db.py  etl_job.py  extract.py  logger.py  main.py  scheduler.py  transform.py  utils.py
